# FastBidder3.0

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: .dockerignore  Dockerfile
docs/: AI_MATCHING.md
scripts/: evaluate_matching.py  tune_threshold.py
src/api/: README.md  __init__.py  dependencies.py  main.py
src/api/routers/: __init__.py  files.py  jobs.py  matching.py  results.py
src/api/schemas/: __init__.py  common.py
src/application/: README.md  __init__.py  models.py
src/application/commands/: __init__.py  process_matching.py
src/application/ports/: __init__.py  file_storage.py  progress_tracker.py
src/application/queries/: __init__.py  get_job_status.py
src/application/services/: __init__.py  file_upload_use_case.py  matching_service.py  process_matching_use_case.py
src/application/tasks/: README.md  __init__.py  celery_app.py  matching_tasks.py
src/domain/: README.md  __init__.py
src/domain/hvac/: __init__.py  constants.py  matching_config.py  patterns.py
src/domain/hvac/entities/: __init__.py  hvac_description.py
src/domain/hvac/evaluation/: __init__.py  evaluation_runner.py  golden_dataset.py  threshold_tuner.py
src/domain/hvac/repositories/: __init__.py  (+1 more)
src/domain/shared/: __init__.py  exceptions.py
src/infrastructure/: README.md  __init__.py
src/infrastructure/file_storage/: __init__.py  excel_reader.py  excel_writer.py  file_storage_service.py
src/infrastructure/matching/: __init__.py  concrete_parameter_extractor.py  hybrid_matching_engine.py  matching_engine.py
src/infrastructure/persistence/: __init__.py
src/shared/: README.md  __init__.py
src/shared/utils/: __init__.py  excel.py
tests/: conftest.py
tests/e2e/: test_happy_path_data_variations.py  test_matching_workflow.py  test_performance.py
tests/fixtures/: generate_fixtures.py  performance_reference_file.xlsx  performance_working_file.xlsx  polish_chars_reference.xlsx  polish_chars_working.xlsx  sample_golden_dataset.json  sample_reference_file.xlsx  sample_working_file.xlsx  single_item_working.xlsx
tests/integration/: test_evaluation_runner_integration.py  test_hybrid_matching_pipeline.py  test_threshold_tuner_integration.py
tests/unit/api/: conftest.py  test_main.py
(+60 files in other folders)
